--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
                     </ul>
                     <div class="nav__button">
-
+                        <button class="">Buy now</button>
                     </div>
                 </nav>
             </div>
