--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <link rel="icon" href="./images/logo.svg" sizes="32x32">
     <title>Polar</title>
 </head>
+
 <body>
 
     <header class="header">
@@ -28,17 +30,39 @@
                         <li class="nav__item"><a href="#testimonials" class="nav__link">Testimonials</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
                     </ul>
-                    <div class="nav__button">
-                        <button class="">Buy now</button>
-                    </div>
+                    <button class="nav__button">Buy now</button>
                 </nav>
             </div>
         </div>
     </header>
-    
-    <div class="hero">
 
-    </div>
+    <section class="hero">
+        <div class="container">
+            <div class="hero__items flex">
+                <div class="col-2">
+                    <div class="hero__text">
+                        <h6 class="hero__subtitle">Sweet fun, full of milk.</h6>
+                        <h1 class="hero__title">Feel inside cold with our delicious <p class="title__icecream">ice-cream.</p></h1>
+                        <p class="hero__description">
+                            Some food has looked so awful that it's looked like something that
+                            the dog's brought home, yet after one mouthful I've been left eating my thoughts, my words.
+                        </p>
+                        <button class="hero__button">Buy now</button>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="hero__img">
+                        <img src="./images/icecream.png" alt="ice-cream" class="hero__icecream">
+                        <img src="./images/cream.png" alt="cream" class="hero__cream">
+                        <!-- <img src="./images/circle.png" alt="circle" class="hero__circle"> -->
+                    </div>
+                    
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
+
 </html>
