began section info

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 <div class="col-2">
                     <div class="hero__text">
                         <h6 class="hero__subtitle">Sweet fun, full of milk.</h6>
-                        <h1 class="hero__title">Feel inside cold with our delicious <p class="title__icecream">ice-cream.</p></h1>
+                        <h1 class="hero__title">Feel inside cold with our delicious <p class="title__icecream">
+                                ice-cream.</p>
+                        </h1>
                         <p class="hero__description">
                             Some food has looked so awful that it's looked like something that
                             the dog's brought home, yet after one mouthful I've been left eating my thoughts, my words.
@@ -56,7 +58,41 @@
                         <img src="./images/cream.png" alt="cream" class="hero__cream">
                         <!-- <img src="./images/circle.png" alt="circle" class="hero__circle"> -->
                     </div>
-                    
+
+                    <section class="info">
+                        <div class="container">
+                            <div class="info__row flex">
+                                <div class="col-4">
+                                    <img src="./images/shipping.png" alt="" class="info__ing">
+                                    <h5 class="ifo__title"></h5>
+                                    <p class="info__description">
+                                        Last Chance! Free shipping on all orders ends today.
+                                    </p>
+                                </div>
+                                <div class="col-4">
+                                    <img src="./images/pack.png" alt="" class="info__ing">
+                                    <h5 class="ifo__title"></h5>
+                                    <p class="info__description">
+                                        Last Chance! Free shipping on all orders ends today.
+                                    </p>
+                                </div>
+                                <div class="col-4">
+                                    <img src="./images/money.png" alt="" class="info__ing">
+                                    <h5 class="ifo__title"></h5>
+                                    <p class="info__description">
+                                        Last Chance! Free shipping on all orders ends today.
+                                    </p>
+                                </div>
+                                <div class="col-4">
+                                    <img src="./images/delivery.png" alt="" class="info__ing">
+                                    <h5 class="ifo__title"></h5>
+                                    <p class="info__description">
+                                        Last Chance! Free shipping on all orders ends today.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
                 </div>
             </div>
