added some changes

--- a/index.html
+++ b/index.html
@@ -58,46 +58,55 @@
                         <img src="./images/cream.png" alt="cream" class="hero__cream">
                         <!-- <img src="./images/circle.png" alt="circle" class="hero__circle"> -->
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-                    <section class="info">
-                        <div class="container">
-                            <div class="info__row flex">
-                                <div class="col-4">
-                                    <img src="./images/shipping.png" alt="" class="info__ing">
-                                    <h5 class="ifo__title"></h5>
-                                    <p class="info__description">
-                                        Last Chance! Free shipping on all orders ends today.
-                                    </p>
-                                </div>
-                                <div class="col-4">
-                                    <img src="./images/pack.png" alt="" class="info__ing">
-                                    <h5 class="ifo__title"></h5>
-                                    <p class="info__description">
-                                        Last Chance! Free shipping on all orders ends today.
-                                    </p>
-                                </div>
-                                <div class="col-4">
-                                    <img src="./images/money.png" alt="" class="info__ing">
-                                    <h5 class="ifo__title"></h5>
-                                    <p class="info__description">
-                                        Last Chance! Free shipping on all orders ends today.
-                                    </p>
-                                </div>
-                                <div class="col-4">
-                                    <img src="./images/delivery.png" alt="" class="info__ing">
-                                    <h5 class="ifo__title"></h5>
-                                    <p class="info__description">
-                                        Last Chance! Free shipping on all orders ends today.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
+    <section class="info">
+        <div class="container">
+            <div class="info__row flex">
+                <div class="col-4 center">
+                    <div class="info__item">
+                        <img src="./images/shipping.png" alt="" class="info__img">
+                        <h5 class="info__title">Free Shipping</h5>
+                        <p class="info__description">
+                            Last Chance! Free shipping on all orders ends today.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-4 center">
+                    <div class="info__item">
+                        <img src="./images/pack.png" alt="" class="info__img">
+                        <h5 class="info__title">Quick Packaging</h5>
+                        <p class="info__description">
+                            Last Chance! Free shipping on all orders ends today.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-4 center">
+                    <div class="info__item">
+                        <img src="./images/money.png" alt="" class="info__img">
+                        <h5 class="info__title">100% Money Back</h5>
+                        <p class="info__description">
+                            Last Chance! Free shipping on all orders ends today.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-4 center">
+                    <div class="info__item">
+                        <img src="./images/delivery.png" alt="" class="info__image">
+                        <h5 class="info__title">Fast Delivery</h5>
+                        <p class="info__description">
+                            Last Chance! Free shipping on all orders ends today.
+                        </p>
+                    </div>
 
                 </div>
             </div>
         </div>
     </section>
+
 
 </body>
 
