began section icecream

--- a/index.html
+++ b/index.html
@@ -101,7 +101,24 @@
                             Last Chance! Free shipping on all orders ends today.
                         </p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="icecream">
+        <div class="container">
+            <div class="icecream__items">
+                <div class="col-2">
+                    <h3 class="icecream__title">Brown Sugar Oatmeal</h3>
+                    <p class="icecream__description">
+                        Together with McDonald’s, Burger King has grown to become synonymous with burgers in the
+                        US.Together with McDonald’s, Burger King has grown to become synonymous.
+                    </p>
+                    <button class="icecream__button">See details</button>
+                </div>
+                <div class="col-2">
+                    <img src="./images/icecream2.png" alt="" class="icecream__img">
                 </div>
             </div>
         </div>
