added section products

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <section class="icecream">
         <div class="container">
-            <div class="icecream__items">
+            <div class="icecream__items flex">
                 <div class="col-2">
                     <h3 class="icecream__title">Brown Sugar Oatmeal</h3>
                     <p class="icecream__description">
@@ -122,6 +122,10 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="products">
+
     </section>
 
 
