began section products

--- a/index.html
+++ b/index.html
@@ -125,10 +125,20 @@
     </section>
 
     <section class="products">
-        <h3 class="products__title"></h3>
+        <div class="container">
+            <h3 class="products__title">Our Product</h3>
+            <div class="products__items">
+                <ul class="products__menu flex">
+                    <li class="products__item"><a href="#ice_cream" class="products__link">Ice cream</a></li>
+                    <li class="products__item"><a href="#cayenne_chocolate" class="products__link">Cayenne chocolate</a></li>
+                    <li class="products__item"><a href="#cake_batter" class="products__link">Cake batter</a></li>
+                    <li class="products__item"><a href="#candy_cane" class="products__link">Candy cane</a></li>
+                    <li class="products__item"><a href="#platters" class="products__link">Platters</a></li>                    
+                    <li class="products__item"><a href="#dessert" class="products__link">Dessert</a></li>                    
+                </ul>
+            </div>
+        </div>
     </section>
 
-
 </body>
-
 </html>
