added product images

--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
                     <li class="products__item"><a href="#dessert" class="products__link">Dessert</a></li>                    
                 </ul>
             </div>
+            <div class="products__col">
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+            </div>
         </div>
     </section>
 
